Name:                hxt-readerstateio
Version:             0.1.0
Synopsis:            Reader State IO Monad without monad transformers
Description:         Reader State IO Monad without monad transformers
License:             BSD3
License-file:        LICENSE
Author:              Uwe Schmidt
Maintainer:          uwe@fh-wedel.de
Copyright:           2011 Uwe Schmidt           
Category:            Control
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:      Control.Monad.ReaderStateIO
                     ,  Control.Monad.ReaderStateIOError

  Hs-Source-Dirs:    ./src

  ghc-options: -Wall

  extensions: MultiParamTypeClasses FunctionalDependencies FlexibleInstances

  Build-depends:       base       >= 4   && < 5
                     , mtl        >= 2
  