Name:                hxt-regex-xmlschema
Version:             9.0.4
Synopsis:            A regular expression library for W3C XML Schema regular expressions
Description:         This library supports full W3C XML Schema regular expressions
                     inclusive all Unicode character sets and blocks.
                     The complete grammar can be found under <http://www.w3.org/TR/xmlschema11-2/#regexs>.
                     It is implemented by the technique of derivations of regular expressions.
                     The W3C syntax is extended to support not only union of regular sets,
                     but also intersection, set difference, exor.
                     Matching of subexpressions is also supported.
                     The library can be used for constricting lightweight scanners and tokenizers.
                     It is a standalone library, no external regex libraries are used.
                     This package is a substitute for the old regex-xmlschema package.
License:             MIT
License-file:        LICENSE
Author:              Uwe Schmidt
Maintainer:          Uwe Schmidt <uwe@fh-wedel.de>
Copyright:           Copyright (c) 2010- Uwe Schmidt
Stability:           stable
Category:            Text
Homepage:            http://www.haskell.org/haskellwiki/Regular_expressions_for_XML_Schema
Build-type:          Simple
Cabal-version:       >=1.6

extra-source-files:
  test/Main.hs
  test/Makefile
  test/.ghci
  examples/colorizeProgs/ColorizeSourceCode.hs
  examples/colorizeProgs/Makefile
  examples/performance/REtest.hs
  examples/performance/Makefile
  examples/RegexXMLSchema/Makefile
  examples/RegexXMLSchema/REtest.hs

Library
  Exposed-modules:
    Text.Regex.XMLSchema.String.RegexParser
    Text.Regex.XMLSchema.String.Regex
    Text.Regex.XMLSchema.String
    Text.Regex.Glob.String.RegexParser
    Text.Regex.Glob.String

  hs-source-dirs: src

  ghc-options: -Wall
  ghc-prof-options: -auto-all -caf-all

  build-depends:     base               >= 4   && < 5,
                     parsec             >= 2.1 && < 4,
                     hxt-charproperties >= 9   && < 10
