Name:                hxt-regex-xmlschema
Version:             9.2.0.2
Synopsis:            A regular expression library for W3C XML Schema regular expressions
Description:         This library supports full W3C XML Schema regular expressions
                     inclusive all Unicode character sets and blocks.
                     The complete grammar can be found under <http://www.w3.org/TR/xmlschema11-2/#regexs>.
                     It is implemented by the technique of derivations of regular expressions.
                     .
                     The W3C syntax is extended to support not only union of regular sets,
                     but also intersection, set difference, exor.
                     Matching of subexpressions is also supported.
                     .
                     The library can be used for constricting lightweight scanners and tokenizers.
                     It is a standalone library, no external regex libraries are used.
                     .
                     Extensions in 9.2: The library does nor only support String's, but also
                     ByteString's and Text in strict and lazy variants                     
License:             MIT
License-file:        LICENSE
Author:              Uwe Schmidt
Maintainer:          Uwe Schmidt <uwe@fh-wedel.de>
Copyright:           Copyright (c) 2010- Uwe Schmidt
Stability:           stable
Category:            Text
Homepage:            http://www.haskell.org/haskellwiki/Regular_expressions_for_XML_Schema
Build-type:          Simple
Cabal-version:       >=1.10

extra-source-files:
  examples/colorizeProgs/ColorizeSourceCode.hs
  examples/colorizeProgs/Makefile
  examples/performance/REtest.hs
  examples/performance/Makefile
  examples/RegexXMLSchema/Makefile
  examples/RegexXMLSchema/REtest.hs

Library
  Exposed-modules:
    Text.Regex.Glob.String
    Text.Regex.Glob.Generic
    Text.Regex.Glob.Generic.RegexParser
    Text.Regex.XMLSchema.String
    Text.Regex.XMLSchema.Generic
    Text.Regex.XMLSchema.Generic.Matching
    Text.Regex.XMLSchema.Generic.RegexParser
    Text.Regex.XMLSchema.Generic.Regex
    Text.Regex.XMLSchema.Generic.StringLike

  hs-source-dirs:    src

  default-language:  Haskell2010

  ghc-options:       -rtsopts 
                     -Wall -fwarn-tabs -funbox-strict-fields

  ghc-prof-options:  -caf-all

  build-depends:     base               >= 4     && < 5
                   , bytestring         >= 0.10
                   , hxt-charproperties >= 9     && < 10
                   , parsec             >= 2.1   && < 4
                   , text               >= 0.10

test-suite SimpleMatch
  hs-source-dirs:    test
  main-is:           SimpleTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall

  build-depends:     base
                   , bytestring
                   , hxt-regex-xmlschema
                   , text
                   , HUnit

test-suite Date
  hs-source-dirs:    test
  main-is:           Date.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall

  build-depends:     base
                   , bytestring
                   , hxt-regex-xmlschema
                   , parsec >= 2
                   , text
                   , HUnit

Benchmark Benchmark
  hs-source-dirs:    test
  main-is:           Benchmark.hs
  type:              exitcode-stdio-1.0

  default-language:  Haskell2010

  ghc-options:       -Wall -O2 -rtsopts

  build-depends:     base
                   , bytestring
                   , criterion           >= 1
                   , deepseq             >= 1.2
                   , hxt-regex-xmlschema
                   , parsec              >= 2
                   , text

Source-Repository head
  Type:     git
  Location: git://github.com/UweSchmidt/hxt.git

