-- arch-tag: Haskell XML Toolbox main description file
Name:           hxt-relaxng
Version:        9.1.3
Synopsis:       The HXT RelaxNG validator
Description:    The HXT RelaxNG validator
License:        MIT
License-file:   LICENSE
Author:         Uwe Schmidt, Martin Schmidt, Torben Kuseler
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Stable
Category:       XML
Homepage:       http://www.fh-wedel.de/~si/HXmlToolbox/index.html
Copyright:      Copyright (c) 2005-2011 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.6

extra-source-files:
 examples/hparser/example1.xml
 examples/hparser/HXmlParser.hs
 examples/hparser/invalid1.xml
 examples/hparser/invalid2.rng
 examples/hparser/invalid3.rng
 examples/hparser/invalid.xml
 examples/hparser/Makefile
 examples/hparser/valid1.rng
 examples/hparser/valid1.xml
 examples/hrelaxng/HRelaxNG.hs
 examples/hrelaxng/Validate.hs
 examples/hrelaxng/invalid1.xml
 examples/hrelaxng/invalid2.rng
 examples/hrelaxng/invalid3.rng
 examples/hrelaxng/Makefile
 examples/hrelaxng/valid1.rng
 examples/hrelaxng/valid1.xml
 examples/hrelaxng/valid2.rng
 examples/hrelaxng/valid2.xml
 examples/hrelaxng/simple.xml
 examples/hrelaxng/simple-qualified.rng
 examples/hrelaxng/simple-unqualified.rng

library
 exposed-modules:
  Text.XML.HXT.RelaxNG,
  Text.XML.HXT.RelaxNG.BasicArrows,
  Text.XML.HXT.RelaxNG.CreatePattern,
  Text.XML.HXT.RelaxNG.DataTypeLibMysql,
  Text.XML.HXT.RelaxNG.DataTypeLibUtils,
  Text.XML.HXT.RelaxNG.DataTypeLibraries,
  Text.XML.HXT.RelaxNG.DataTypes,
  Text.XML.HXT.RelaxNG.PatternFunctions,
  Text.XML.HXT.RelaxNG.PatternToString,
  Text.XML.HXT.RelaxNG.Schema,
  Text.XML.HXT.RelaxNG.SchemaGrammar,
  Text.XML.HXT.RelaxNG.Simplification,
  Text.XML.HXT.RelaxNG.SystemConfig,
  Text.XML.HXT.RelaxNG.Utils,
  Text.XML.HXT.RelaxNG.Validation,
  Text.XML.HXT.RelaxNG.Validator,
  Text.XML.HXT.RelaxNG.XMLSchema.DataTypeLibW3C

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -auto-all -caf-all

 -- extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances

 build-depends: base       >= 4   && < 5,
                haskell98  >= 1   && < 2,
                containers >= 0.2 && < 1,
                parsec     >= 2.1 && < 4,
                network    >= 2.1 && < 3,
                hxt                 >= 9.1.3 && < 10,
                hxt-charproperties  >= 9     && < 10,
                hxt-regex-xmlschema >= 9     && < 10