-- arch-tag: Haskell XML Toolbox main description file
Name:           hxt-tagsoup
Version:        9.1.3.1
Synopsis:       TagSoup parser for HXT
Description:    The Tagsoup interface for the HXT lazy HTML parser.
License:        MIT
License-file:   LICENSE
Author:         Uwe Schmidt
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Stable
Category:       XML
Homepage:       https://github.com/UweSchmidt/hxt
Copyright:      Copyright (c) 2014 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.6

extra-source-files:
 examples/hparser/HXmlParser.hs

library
 exposed-modules:
  Text.XML.HXT.TagSoup

 other-modules:
  Text.XML.HXT.Arrow.TagSoupInterface,
  Text.XML.HXT.Parser.TagSoup

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -caf-all

 extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances CPP

 build-depends: base               >= 4    && < 5,
                tagsoup            >= 0.13 && < 0.15,
                hxt-charproperties >= 9    && < 10,
                hxt-unicode        >= 9    && < 10,
                hxt                >= 9.1  && < 10
Source-Repository head
  Type:     git
  Location: git://github.com/UweSchmidt/hxt.git
