Name:                hxt-unicode
Version:             9.0.2.4
Synopsis:            Unicode en-/decoding functions for utf8, iso-latin-* and other encodings
Description:         Unicode encoding and decoding functions for utf8, iso-latin-* and somes other encodings,
                     used in the Haskell XML Toolbox.
                     ISO Latin 1 - 16, utf8, utf16, ASCII are supported. Decoding
                     is done with lazy functions, errors may be detected or ignored.
Homepage:            http://www.fh-wedel.de/~si/HXmlToolbox/index.html
License:             MIT
License-file:        LICENSE
Author:              Uwe Schmidt
Maintainer:          Uwe Schmidt <uwe@fh-wedel.de>
Homepage:            https://github.com/UweSchmidt/hxt
Copyright:           Copyright (c) 2010- Uwe Schmidt
Stability:           Stable
Category:            Text
Build-type:          Simple

Cabal-version:       >=1.6

Library
  Exposed-modules:     
    Data.Char.IsoLatinTables
    Data.String.EncodingNames
    Data.String.UTF8
    Data.String.UTF8Decoding
    Data.String.Unicode

  Build-depends:      base               >= 4 && < 5 ,
                      hxt-charproperties >= 9 && < 10
  
  hs-source-dirs: src

  ghc-options: -Wall
  ghc-prof-options: -caf-all

Source-Repository head
  Type:     git
  Location: git://github.com/UweSchmidt/hxt.git
