-- arch-tag: Haskell XML Toolbox main description file
Name:           hxt-xmlschema
Version:        9.3.0.4
Synopsis:       The HXT XMLSchema validator
Description:    The HXT XMLSchema validator
License:        MIT
License-file:   LICENSE
Author:         Thorben Guelck
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Experimental
Category:       XML
Homepage:       http://www.fh-wedel.de/~si/HXmlToolbox/index.html
Copyright:      Copyright (c) 2012 Thorben Guelck, Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.8

extra-source-files:
  tests/complexTypesErrors.xml
  tests/complexTypesOk.xml
  tests/complexTypes.xsd
  tests/example.xml
  tests/example.xsd
  tests/incl.xsd
  tests/redefine.xml
  tests/redefine.xsd
  tests/simpleTypesAttrsErrors.xml
  tests/simpleTypesAttrsOk.xml
  tests/simpleTypesAttrs.xsd
  tests/simpleTypesElemsErrors.xml
  tests/simpleTypesElemsOk.xml
  tests/simpleTypesElems.xsd
  tests/simpleTypes.xsd

library
  exposed-modules:
    Text.XML.HXT.XMLSchema

  other-modules:
    Text.XML.HXT.XMLSchema.AbstractSyntax
    Text.XML.HXT.XMLSchema.Loader
    Text.XML.HXT.XMLSchema.Regex
    Text.XML.HXT.XMLSchema.SystemConfig
    Text.XML.HXT.XMLSchema.Transformation
    Text.XML.HXT.XMLSchema.Validation
    Text.XML.HXT.XMLSchema.ValidationCore
    Text.XML.HXT.XMLSchema.ValidationTypes
    Text.XML.HXT.XMLSchema.W3CDataTypeCheck
    Text.XML.HXT.XMLSchema.W3CDataTypeCheckUtils
    Text.XML.HXT.XMLSchema.XmlUtils

  hs-source-dirs: src

  ghc-options: -Wall
  ghc-prof-options: -auto-all -caf-all

  build-depends: base                >= 4     && < 5,
                 containers          >= 0.2   && < 1,
                 parsec              >= 2.1   && < 4,
                 network             >= 2.1   && < 3,
                 hxt                 >= 9.3   && < 10,
                 hxt-regex-xmlschema >= 9     && < 10,
                 mtl                 >= 2     && < 3,
                 time                >= 1.4   && < 2

executable validateWithSchema
  main-is: Main.hs

  other-modules:
    Text.XML.HXT.XMLSchema.TestSuite

  hs-source-dirs: src

  ghc-options: -Wall
  ghc-prof-options: -auto-all -caf-all

  build-depends: base                >= 4     && < 5,
                 containers          >= 0.2   && < 1,
                 parsec              >= 2.1   && < 4,
                 network             >= 2.1   && < 3,
                 hxt                 >= 9.2.3 && < 10,
                 hxt-regex-xmlschema >= 9     && < 10,
                 hxt-curl            >= 9.1.1 && < 10,
                 mtl                 >= 2     && < 3,
                 HUnit               >= 1.2   && < 2

Source-Repository head
  Type:     git
  Location: git://github.com/UweSchmidt/hxt.git


