-- arch-tag: Haskell XML Toolbox main description file
Name:           hxt-xmlschema
Version:        9.3.1.3
Synopsis:       The HXT XMLSchema validator
Description:    The HXT XMLSchema validator
License:        MIT
License-file:   LICENSE
Author:         Thorben Guelck
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Experimental
Category:       XML
Homepage:       https://github.com/UweSchmidt/hxt
Copyright:      Copyright (c) 2012 Thorben Guelck, Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.8

extra-source-files:
  tests/complexTypesErrors.xml
  tests/complexTypesOk.xml
  tests/complexTypes.xsd
  tests/example.xml
  tests/example.xsd
  tests/incl.xsd
  tests/redefine.xml
  tests/redefine.xsd
  tests/simpleTypesAttrsErrors.xml
  tests/simpleTypesAttrsOk.xml
  tests/simpleTypesAttrs.xsd
  tests/simpleTypesElemsErrors.xml
  tests/simpleTypesElemsOk.xml
  tests/simpleTypesElems.xsd
  tests/simpleTypes.xsd

flag network-uri
  description: Get Network.URI from the network-uri package,
               with ghc <  7.10 default is False,
               with ghc >= 7.10 default is True 
  default: False

library
  exposed-modules:
    Text.XML.HXT.XMLSchema

  other-modules:
    Text.XML.HXT.XMLSchema.AbstractSyntax
    Text.XML.HXT.XMLSchema.Loader
    Text.XML.HXT.XMLSchema.Regex
    Text.XML.HXT.XMLSchema.SystemConfig
    Text.XML.HXT.XMLSchema.Transformation
    Text.XML.HXT.XMLSchema.Validation
    Text.XML.HXT.XMLSchema.ValidationCore
    Text.XML.HXT.XMLSchema.ValidationTypes
    Text.XML.HXT.XMLSchema.W3CDataTypeCheck
    Text.XML.HXT.XMLSchema.W3CDataTypeCheckUtils
    Text.XML.HXT.XMLSchema.XmlUtils

  hs-source-dirs: src

  ghc-options: -Wall

  build-depends: base                >= 4     && < 42,
                 containers          >= 0.2,
                 parsec              >= 2.1   && < 4,
                 hxt                 >= 9.3,
                 hxt-regex-xmlschema >= 9.2,
                 mtl                 >= 2,
                 time                >= 1.4

  if flag(network-uri)
    build-depends: network-uri >= 2.6
  else
    if impl(ghc >= 7.10)
      build-depends: network-uri >= 2.6
    else
      build-depends: network >= 2.4 && < 2.6

executable validateWithSchema
  main-is: Main.hs

  other-modules:
    Text.XML.HXT.XMLSchema.TestSuite
    Text.XML.HXT.XMLSchema.AbstractSyntax
    Text.XML.HXT.XMLSchema.Loader
    Text.XML.HXT.XMLSchema.Regex
    Text.XML.HXT.XMLSchema.Transformation
    Text.XML.HXT.XMLSchema.Validation
    Text.XML.HXT.XMLSchema.ValidationCore
    Text.XML.HXT.XMLSchema.ValidationTypes
    Text.XML.HXT.XMLSchema.W3CDataTypeCheck
    Text.XML.HXT.XMLSchema.W3CDataTypeCheckUtils
    Text.XML.HXT.XMLSchema.XmlUtils

  hs-source-dirs: src

  ghc-options: -Wall

  build-depends: base,
                 containers,
                 parsec,
                 hxt,
                 hxt-regex-xmlschema,
                 hxt-curl >= 9.1.1,
                 mtl,
                 time,
                 HUnit >= 1.2   && < 2

  if flag(network-uri)
    build-depends: network-uri >= 2.6
  else
    if impl(ghc >= 7.10)
      build-depends: network-uri >= 2.6
    else
      build-depends: network >= 2.4 && < 2.6

Source-Repository head
  Type:     git
  Location: git://github.com/UweSchmidt/hxt.git
