-- arch-tag: Haskell XML Toolbox XPath Package
name: hxt-xpath
version: 8.5.0
license: OtherLicense
license-file: LICENCE
maintainer: Uwe Schmidt <uwe@fh-wedel.de>
stability: stable
category: XML
synopsis: The XPath modules for HXT.
description:  The Haskell XML Toolbox XPath library. Since version 8.5 this library is packed in a separate package.
homepage: http://www.fh-wedel.de/~si/HXmlToolbox/index.html
copyright: Copyright (c) 2005-2010 Uwe Schmidt
build-type: Simple
cabal-version: >=1.6

extra-source-files:
 examples/hunit/HUnitExample.hs
 examples/hunit/Makefile
 examples/hunit/mini1.xml
 examples/hunit/mini2.xml
 examples/hxpath/example1.xml
 examples/hxpath/.ghci
 examples/hxpath/.gitignore
 examples/hxpath/HXPath.hs
 examples/hxpath/Makefile
 examples/hxpath/W3CTestData.hs
 examples/hxpath/xhtml/xhtml1-frameset.dtd
 examples/hxpath/xhtml/xhtml1-strict.dtd
 examples/hxpath/xhtml/xhtml1-transitional.dtd
 examples/hxpath/xhtml/xhtml-lat1.ent
 examples/hxpath/xhtml/xhtml-special.ent
 examples/hxpath/xhtml/xhtml-symbol.ent
 examples/hxpath/xhtml/xhtml.xml
 examples/hxpath/XPathShell.hs
 examples/Makefile

library
 exposed-modules:
  Text.XML.HXT.XPath,
  Text.XML.HXT.XPath.Arrows,
  Text.XML.HXT.XPath.NavTree,
  Text.XML.HXT.XPath.XPathArithmetic,
  Text.XML.HXT.XPath.XPathDataTypes,
  Text.XML.HXT.XPath.XPathEval,
  Text.XML.HXT.XPath.XPathFct,
  Text.XML.HXT.XPath.XPathKeywords,
  Text.XML.HXT.XPath.XPathParser,
  Text.XML.HXT.XPath.XPathToNodeSet,
  Text.XML.HXT.XPath.XPathToString

 hs-source-dirs: src
 ghc-options: -Wall
 extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances

 build-depends: base       >= 4.2 && < 5,
                haskell98  >= 1   && < 2,
                containers >= 0.3 && < 1,
                directory  >= 1   && < 2,
                filepath   >= 1   && < 2,
                parsec     >= 2.1 && < 4,
                hxt        >= 8.5 && < 9

