-- arch-tag: Haskell XML Toolbox XSLT Module
Name:           hxt-xslt
Version:        9.1.1
Synopsis:       The XSLT modules for HXT.
Description:    The Haskell XML Toolbox XSLT library.
License:        OtherLicense
License-file:   LICENSE
Author:         Tim Walkenhorst
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Experimental
Category:       XML
Homepage:       http://www.fh-wedel.de/~si/HXmlToolbox/index.html
Copyright:      Copyright (c) 2005-2010 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.6

extra-source-files:
 examples/hparser/HXmlParser.hs
 examples/hparser/Makefile                                                         
 examples/hparser/xslt/alias2.xsl
 examples/hparser/xslt/alias.xsl
 examples/hparser/xslt/attset_imp.xsl
 examples/hparser/xslt/attset.xsl
 examples/hparser/xslt/comment_pi.xsl
 examples/hparser/xslt/copy_copy_of.xsl
 examples/hparser/xslt/default_prio.xsl
 examples/hparser/xslt/default_rules.xsl                                           
 examples/hparser/xslt/doc_level_prep_exp.xsl
 examples/hparser/xslt/doc_level_prep.xsl
 examples/hparser/xslt/elems_and_attrs.xsl
 examples/hparser/xslt/empty.xml
 examples/hparser/xslt/example2.xml
 examples/hparser/xslt/example_document2.xml
 examples/hparser/xslt/example_document3.xml
 examples/hparser/xslt/example_document.xml
 examples/hparser/xslt/exdoc2.xml
 examples/hparser/xslt/for_each_when_if.xsl
 examples/hparser/xslt/imp_lre.xsl
 examples/hparser/xslt/inc_lre.xsl
 examples/hparser/xslt/invoiceSort.xsl
 examples/hparser/xslt/invoice.xml
 examples/hparser/xslt/invoice.xsl
 examples/hparser/xslt/lre_stylesheet.xsl
 examples/hparser/xslt/lre.xsl                                                     
 examples/hparser/xslt/Makefile
 examples/hparser/xslt/match_by_for_each.xsl
 examples/hparser/xslt/nspropXSLT.xsl
 examples/hparser/xslt/nspropXSLTyyy.xsl
 examples/hparser/xslt/prio_imp1_1.xsl
 examples/hparser/xslt/prio_imp1_2.xsl
 examples/hparser/xslt/prio_imp1.xsl
 examples/hparser/xslt/prio_imp2.xsl
 examples/hparser/xslt/prio_inc.xsl
 examples/hparser/xslt/prio.xsl
 examples/hparser/xslt/recAdd.xsl
 examples/hparser/xslt/sorting.xsl
 examples/hparser/xslt/strip_example.xml
 examples/hparser/xslt/strip_example.xsl
 examples/hparser/xslt/strip_space_imp.xsl
 examples/hparser/xslt/strip_space_with_rules.xsl
 examples/hparser/xslt/strip_space.xsl
 examples/hparser/xslt/stripXSLT.xsl
 examples/hparser/xslt/testEX.xsl
 examples/hparser/xslt/testNS.xml
 examples/hparser/xslt/testNS.xsl
 examples/hparser/xslt/vars_and_params_imp.xsl
 examples/hparser/xslt/vars_and_params.xsl
 examples/Makefile                                                                 

library
 exposed-modules:
  Text.XML.HXT.XSLT,
  Text.XML.HXT.XSLT.Application,
  Text.XML.HXT.XSLT.Common,
  Text.XML.HXT.XSLT.Compilation,
  Text.XML.HXT.XSLT.CompiledStylesheet,
  Text.XML.HXT.XSLT.Names,
  Text.XML.HXT.XSLT.XsltArrows

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -auto-all -caf-all

 extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances

 build-depends: base       >= 4   && < 5,
                containers >= 0.2 && < 1,
                directory  >= 1   && < 2,
                filepath   >= 1   && < 2,
                parsec     >= 2.1 && < 4,
                hxt        >= 9.1 && < 10,
                hxt-xpath  >= 9.1 && < 10

