-- arch-tag: Haskell XML Toolbox main description file
name: hxt
version: 8.5.2
license: OtherLicense
license-file: LICENCE
maintainer: Uwe Schmidt <uwe@fh-wedel.de>
stability: stable
category: XML
synopsis: A collection of tools for processing XML with Haskell. 
description:  The Haskell XML Toolbox bases on the ideas of HaXml and HXML, but introduces a more general approach for processing XML with Haskell. The Haskell XML Toolbox uses a generic data model for representing XML documents, including the DTD subset and the document subset, in Haskell. It contains a validating XML parser, a HTML parser, namespace support, an XPath expression evaluator, an XSLT library, a RelaxNG schema validator and funtions for serialization and deserialization of user defined data. The library make extensive use of the arrow approach for processing XML. Since version 8.5 XPath and XSLT have been moved to separate packages hxt-xpath and hxt-xslt.
homepage: http://www.fh-wedel.de/~si/HXmlToolbox/index.html
copyright: Copyright (c) 2005-2010 Uwe Schmidt
build-type: Simple
cabal-version: >=1.6

extra-source-files:
 examples/arrows/absurls/AbsURIs.hs
 examples/arrows/absurls/lousy.html
 examples/arrows/absurls/Makefile
 examples/arrows/absurls/ProcessDocument.hs
 examples/arrows/AGentleIntroductionToHXT/.ghci
 examples/arrows/AGentleIntroductionToHXT/Makefile
 examples/arrows/AGentleIntroductionToHXT/PicklerExample/Baseball.hs
 examples/arrows/AGentleIntroductionToHXT/PicklerExample/Makefile
 examples/arrows/AGentleIntroductionToHXT/PicklerExample/new-simple2.xml
 examples/arrows/AGentleIntroductionToHXT/PicklerExample/simple2.xml
 examples/arrows/AGentleIntroductionToHXT/SimpleExamples.hs
 examples/arrows/dtd2hxt/DTDtoHXT.hs
 examples/arrows/dtd2hxt/.ghci
 examples/arrows/dtd2hxt/Makefile
 examples/arrows/HelloWorld/bye.xml
 examples/arrows/HelloWorld/HelloWorld.hs
 examples/arrows/HelloWorld/hello.xml
 examples/arrows/HelloWorld/Makefile
 examples/arrows/HelloWorld/Mini.hs
 examples/arrows/hparser/emptyElements.html
 examples/arrows/hparser/example1.xml
 examples/arrows/hparser/HXmlParser.hs
 examples/arrows/hparser/invalid1.xml
 examples/arrows/hparser/invalid2.rng
 examples/arrows/hparser/invalid3.rng
 examples/arrows/hparser/invalid.xml
 examples/arrows/hparser/lousy.html
 examples/arrows/hparser/Makefile
 examples/arrows/hparser/namespace0.xml
 examples/arrows/hparser/namespace1.xml
 examples/arrows/hparser/valid1.rng
 examples/arrows/hparser/valid1.xml
 examples/arrows/hrelaxng/.ghci
 examples/arrows/hrelaxng/HRelaxNG.hs
 examples/arrows/hrelaxng/invalid1.xml
 examples/arrows/hrelaxng/invalid2.rng
 examples/arrows/hrelaxng/invalid3.rng
 examples/arrows/hrelaxng/Makefile
 examples/arrows/hrelaxng/valid1.rng
 examples/arrows/hrelaxng/valid1.xml
 examples/arrows/hrelaxng/valid2.rng
 examples/arrows/hrelaxng/valid2.xml
 examples/arrows/performance/GenDoc.hs
 examples/arrows/performance/Makefile
 examples/arrows/pickle/Makefile
 examples/arrows/pickle/PickleTest.hs
 examples/arrows/RegexXMLSchema/Makefile
 examples/arrows/RegexXMLSchema/REtest.hs

library
 exposed-modules:
  Control.Arrow.ArrowIO,
  Control.Arrow.ArrowIf,
  Control.Arrow.ArrowList,
  Control.Arrow.ArrowNF,
  Control.Arrow.ArrowState,
  Control.Arrow.ArrowTree,
  Control.Arrow.IOListArrow,
  Control.Arrow.IOStateListArrow,
  Control.Arrow.ListArrow,
  Control.Arrow.ListArrows,
  Control.Arrow.StateListArrow,
  Data.AssocList,
  Data.Atom,
  Data.Char.UTF8,
  Data.Tree.Class,
  Data.Tree.NTree.TypeDefs,
  Text.XML.HXT.Arrow,
  Text.XML.HXT.Arrow.DTDProcessing,
  Text.XML.HXT.Arrow.DocumentInput,
  Text.XML.HXT.Arrow.DocumentOutput,
  Text.XML.HXT.Arrow.Edit,
  Text.XML.HXT.Arrow.GeneralEntitySubstitution,
  Text.XML.HXT.Arrow.Namespace,
  Text.XML.HXT.Arrow.ParserInterface,
  Text.XML.HXT.Arrow.Pickle,
  Text.XML.HXT.Arrow.Pickle.DTD,
  Text.XML.HXT.Arrow.Pickle.Schema,
  Text.XML.HXT.Arrow.Pickle.Xml,
  Text.XML.HXT.Arrow.ProcessDocument,
  Text.XML.HXT.Arrow.ReadDocument,
  Text.XML.HXT.Arrow.WriteDocument,
  Text.XML.HXT.Arrow.XmlArrow,
  Text.XML.HXT.Arrow.XmlIOStateArrow,
  Text.XML.HXT.Arrow.XmlRegex,
  Text.XML.HXT.DOM.FormatXmlTree,
  Text.XML.HXT.DOM.Interface,
  Text.XML.HXT.DOM.IsoLatinTables,
  Text.XML.HXT.DOM.MimeTypeDefaults,
  Text.XML.HXT.DOM.MimeTypes,
  Text.XML.HXT.DOM.QualifiedName,
  Text.XML.HXT.DOM.ShowXml,
  Text.XML.HXT.DOM.TypeDefs,
  Text.XML.HXT.DOM.UTF8Decoding,
  Text.XML.HXT.DOM.Unicode,
  Text.XML.HXT.DOM.Util,
  Text.XML.HXT.DOM.XmlKeywords,
  Text.XML.HXT.DOM.XmlNode,
  Text.XML.HXT.DOM.XmlOptions,
  Text.XML.HXT.DTDValidation.AttributeValueValidation,
  Text.XML.HXT.DTDValidation.DTDValidation,
  Text.XML.HXT.DTDValidation.DocTransformation,
  Text.XML.HXT.DTDValidation.DocValidation,
  Text.XML.HXT.DTDValidation.IdValidation,
  Text.XML.HXT.DTDValidation.RE,
  Text.XML.HXT.DTDValidation.TypeDefs,
  Text.XML.HXT.DTDValidation.Validation,
  Text.XML.HXT.DTDValidation.XmlRE,
  Text.XML.HXT.IO.GetFILE,
  Text.XML.HXT.IO.GetHTTPLibCurl,
  Text.XML.HXT.Parser.HtmlParsec,
  Text.XML.HXT.Parser.ProtocolHandlerUtil,
  Text.XML.HXT.Parser.TagSoup,
  Text.XML.HXT.Parser.XhtmlEntities,
  Text.XML.HXT.Parser.XmlCharParser,
  Text.XML.HXT.Parser.XmlDTDParser,
  Text.XML.HXT.Parser.XmlDTDTokenParser,
  Text.XML.HXT.Parser.XmlEntities,
  Text.XML.HXT.Parser.XmlParsec,
  Text.XML.HXT.Parser.XmlTokenParser,
  Text.XML.HXT.RelaxNG,
  Text.XML.HXT.RelaxNG.BasicArrows,
  Text.XML.HXT.RelaxNG.CreatePattern,
  Text.XML.HXT.RelaxNG.DataTypeLibMysql,
  Text.XML.HXT.RelaxNG.DataTypeLibUtils,
  Text.XML.HXT.RelaxNG.DataTypeLibraries,
  Text.XML.HXT.RelaxNG.DataTypes,
  Text.XML.HXT.RelaxNG.PatternFunctions,
  Text.XML.HXT.RelaxNG.PatternToString,
  Text.XML.HXT.RelaxNG.Schema,
  Text.XML.HXT.RelaxNG.SchemaGrammar,
  Text.XML.HXT.RelaxNG.Simplification,
  Text.XML.HXT.RelaxNG.Unicode.Blocks,
  Text.XML.HXT.RelaxNG.Unicode.CharProps,
  Text.XML.HXT.RelaxNG.Utils,
  Text.XML.HXT.RelaxNG.Validation,
  Text.XML.HXT.RelaxNG.Validator,
  Text.XML.HXT.RelaxNG.XmlSchema.DataTypeLibW3C,
  Text.XML.HXT.RelaxNG.XmlSchema.Regex,
  Text.XML.HXT.RelaxNG.XmlSchema.RegexMatch,
  Text.XML.HXT.RelaxNG.XmlSchema.RegexParser,
  Text.XML.HXT.Version

 hs-source-dirs: src

 ghc-options: -Wall

 extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances

 build-depends: base       >= 4   && < 5,
                haskell98  >= 1   && < 2,
                containers >= 0.2 && < 1,
                directory  >= 1   && < 2,
                filepath   >= 1   && < 2,
                parsec     >= 2.1 && < 4,
                HUnit      >= 1.2 && < 2,
                network    >= 2.1 && < 3,
                deepseq    >= 1.1 && < 2,
                bytestring >= 0.9 && < 1,
                tagsoup    >= 0.8 && < 0.9,
                curl       >= 1.3 && < 2
